* fixed errors in todo dialog.

--- a/zentao/todos.html
+++ b/zentao/todos.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 <body>
-<div class="content">
+<div class="content" id="content">
   <div class="slider">
       <div class="slider-header">
         <nav class="slider-indicator segmented-control segmented-control-inverted" id="listviewNav">
@@ -114,6 +114,7 @@ var listview = new ListView('todo', function(tab, data)
 
     this.updateTabBadge(tab, unreadCount);
 });
+
 </script>
 </body>
 </html>
