--- a/zentao/todo.html
+++ b/zentao/todo.html
@@ -4,24 +4,23 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
   <title>禅道待办</title>
-  <link href="css/mui.min.css" rel="stylesheet"/>
-  <link href="css/font-awesome.min.css" rel="stylesheet"/>
+  <link href="css/zui.m.min.css" rel="stylesheet"/>
   <link href="css/style.css" rel="stylesheet"/>
   <link href="css/subpage.css" rel="stylesheet"/>
   <link href="css/dialog.css" rel="stylesheet"/>
 </head>
 <body>
-<header class="mui-bar headbar mui-bar-nav">
-  <h1 class="mui-title mui-action-back"><i class="fa fa-angle-left"></i> 待办</h1>
+<header class="bar headbar bar-nav">  
+  <h1 class="title action-back"><i class="icon icon-angle-left"></i> 待办</h1>
 </header>
 <div class="dialog" id="dialog">
-  <header class="pri">
+  <header class="pri dialog-header" id="dialogHeader">
     <h4><span class="obj-id item-id pri" id="objID">&nbsp;</span> <span class="obj-name"></span></h4>
     <div class="info">
-      <div class="mui-pull-right small"><i class="fa fa-chevron-down text-muted info-more-icon"></i></div>
+      <div class="pull-right small"><i class="icon icon-chevron-down text-muted info-more-icon"></i></div>
       <div class="block-lines">
-        <div><span class="mui-badge" id="objStatus">&nbsp;</span></div>
-        <div class="small"><span class="mui-badge mui-badge-inverted" id="when"><span class="obj-when"></span> <span class="obj-begin"></span>~<span class="obj-end"></span></span></div>
+        <div><span class="badge" id="objStatus">&nbsp;</span></div>
+        <div class="small"><span class="badge badge-inverted" id="when"><span class="obj-when"></span> <span class="obj-begin"></span>~<span class="obj-end"></span></span></div>
       </div>
     </div>
     <div class="info info-more">
@@ -31,31 +30,23 @@
   </header>
   <section>
     <h5>描述</h5>
-    <div class="mui-content-padded obj-desc article-content-plain" data-default="<span class='small text-muted'>--- 没有描述 ---</span>"></div>
+    <div class="content-padded obj-desc article-content-plain" data-default="<span class='small text-muted'>--- 没有描述 ---</span>"></div>
   </section>
 </div>
-<!-- <script src="js/angular/angular.min.js"></script> -->
-<script src="js/core.js"></script>
-<script src="js/$.js"></script>
-<script src="js/console.js"></script>
-<script src="js/store.js"></script>
-<script src="js/mui.js"></script>
-<script src="js/zentao.js"></script>
+<script src="js/lib/zui.m.js"></script>
 <script src="js/webview.js"></script>
 <script src="js/dialog.js"></script>
 <script>
 var options,
     today = Date.parseName('today'),
     currentView;
-zentao.ready(function()
-{
-    currentView = plus.webview.currentWebview();
-    options = currentView.dialogOptions;
-    $('#idid').innerHTML = options.id;
 
-    var obj = zentao.data[options.type].getById(options.id);
-    console.log(obj);
-    render(obj);
+window.plusReady(function()
+{
+    currentView = window.currentWebview;
+    options = currentView.options;
+    console.log(options);
+    render(options.data);
 });
 
 function render(obj)
@@ -63,33 +54,24 @@ function render(obj)
     var doms, val, fmt, dft, dVal;
     for(var name in obj)
     {
-        doms = $(".obj-" + name),
+        doms = document.$class("obj-" + name),
         val = obj[name];
-        if(doms.forEach)
+
+        doms.forEach(function(el)
         {
-            doms.forEach(function(el)
-            {
-                fmt = el.getAttribute('data-format');
-                dft = el.getAttribute('data-default');
-                dVal = dft && (!val) ? dft : val;
-                el.innerHTML = fmt ? dVal.format(fmt) : dVal;
-            });
-        }
-        else
-        {
-            fmt = doms.getAttribute('data-format');
-            dft = doms.getAttribute('data-default');
+            fmt = el.getAttribute('data-format');
+            dft = el.getAttribute('data-default');
             dVal = dft && (!val) ? dft : val;
-            doms.innerHTML = dVal && fmt ? dVal.format(fmt) : dVal;
-        }
+            el.innerHTML = fmt ? dVal.format(fmt) : dVal;
+        });
     }
 
-    $("#dialog > header").classList.add('pri-' + obj.pri);
-    $("#objID").classList.add('pri-' + obj.pri);
-    var $status = $('#objStatus');
+    document.$id('dialogHeader').classList.add('pri-' + obj.pri);
+    document.$id("objID").classList.add('pri-' + obj.pri);
+    var $status = document.$id('objStatus');
     $status.innerHTML = obj.statusName;
-    $status.classList.add('mui-badge-' + obj.statusColor);
-    $("#when").classList[obj.date < today ? 'add' : 'remove']('mui-badge-danger');
+    $status.classList.add('badge-' + obj.statusColor);
+    document.$id('when').classList[obj.date < today ? 'add' : 'remove']('badge-danger');
 }
 </script>
 </body>
