--- a/zentao/tasks.html
+++ b/zentao/tasks.html
@@ -46,7 +46,7 @@
 <script src="js/userdata.js"></script>
 <script src="js/listview.js"></script>
 <script>
-var listview = new ListView('task', function(tab, data)
+var listview = new ListView('task', function(tab, data, lessCount)
 {
     var $tab        = document.$id(tab);
         $tasks      = $tab.$('.listview-list'),
@@ -60,10 +60,19 @@ var listview = new ListView('task', function(tab, data)
     }
 
     var item;
-    data.forEach(function(val)
+    data.each(function(val)
     {
         item = document.createElement('li');
         item.classList.add('table-view-cell');
+        item.setAttribute('data-tab', tab);
+        if(lessCount && (++count) >= lessCount)
+        {
+            item.classList.add('show-more');
+            item.innerHTML = '<a>显示更多 <i class="icon icon-chevron-down"></i></a>';
+            $bugs.appendChild(item);
+            return false;
+        }
+
         item.classList.add('pri');
         item.classList.add('pri-' + val.pri);
         if(val.unread)
@@ -72,7 +81,6 @@ var listview = new ListView('task', function(tab, data)
             unreadCount++;
         }
         item.setAttribute('data-id', val.id);
-        item.setAttribute('data-tab', tab);
         item.classList.add('item-id-' + val.id);
         item.innerHTML = '<a><span class="list-title"><span class="list-item-id">' + val.id + '</span>' + val.name + '</span>' + '<span class="badge badge-' + val.statusColor + '">' + val.statusName + '</span></a>';
         $tasks.appendChild(item);
