* ajusted style of listview.

--- a/zentao/todos.html
+++ b/zentao/todos.html
@@ -15,8 +15,8 @@
   .table-view-cell > .list-title {padding-right: 90px;}
   </style>
 </head>
-<body>
-<div class="content" id="content">
+<body> 
+<div class="content">
   <div class="slider">
       <div class="slider-header">
         <nav class="slider-indicator segmented-control segmented-control-inverted" id="listviewNav">
@@ -30,7 +30,6 @@
       <div class="slider-group" id="listview">
         <div id="today" class="slider control-content active">
           <ul class="table-view listview-list">
-            <li class="table-view-cell show-more"><a>显示更多 <i class="icon icon-chevron-down"></i></a></li>
           </ul>
         </div>
         <div id="yestoday" class="slider control-content">
