--- a/zentao/stories.html
+++ b/zentao/stories.html
@@ -50,6 +50,7 @@ var listview = new ListView('story', function(tab, data, lessCount)
     var $tab = document.$id(tab),
         $storys = $tab.$('.listview-list'),
         unreadCount = 0,
+        count       = 0,
         today = Date.parseName('today');
 
     for(var i = $storys.childNodes.length - 1; i >= 0; i--)
@@ -68,7 +69,7 @@ var listview = new ListView('story', function(tab, data, lessCount)
         {
             item.classList.add('show-more');
             item.innerHTML = '<a>显示更多 <i class="icon icon-chevron-down"></i></a>';
-            $bugs.appendChild(item);
+            $storys.appendChild(item);
             return false;
         }
 
@@ -87,7 +88,7 @@ var listview = new ListView('story', function(tab, data, lessCount)
     });
 
     this.updateTabBadge(tab, unreadCount);
-};
+});
 </script>
 </body>
 </html>
