* ajusted style of login view.

--- a/zentao/login.html
+++ b/zentao/login.html
@@ -10,7 +10,7 @@
     #login
     {
       margin: auto;
-      background: #0475e1;
+      background: #428bca;
       position: absolute;
       left: 0;
       top: 0;
@@ -54,7 +54,7 @@
     }
     #loginForm .btn-primary
     {
-      background: #2694ff
+      background: #0071bd
     }
     #backBtn, #tipButton
     {
